updated project to use lcs-reflector deployed on render

--- a/src/playground/config.json
+++ b/src/playground/config.json
@@ -1,4 +1,4 @@
 {
-    "defaultReflectorHost": "http://localhost:3001",
+    "defaultReflectorHost": "https://lcs-reflector.onrender.com/",
     "devMode": false
 }
